# cyan

./: .ci.sh  .gitignore  .gitmodules  .qmake.cache  .travis.yml  CMakeLists.txt  CNAME  ChangeLog  GPL_EXCEPTION  README.md  READMEv2.md  cyan.cpp  cyan.desktop  cyan.h  cyan.pri  cyan.pro  cyan.qrc  cyan.rc  lumina-extra.pri  lumina-extra.pro  lumina-extra.spec  magenta.cpp  magenta.h  tests.pro  yellow.cpp  yellow.h
.github/: FUNDING.yml
CyanCanvas/: view.cpp  view.h
CyanCommon/: CyanCommon.pro  common.cpp  common.h  render.cpp  render.h  tileitem.cpp
CyanUILayers/: cyanlayertreeitem.h  cyanlayerwidget.cpp
api/: CyanApi.cpp  CyanApi.h  CyanApiGlobal.h  api.pro
app/: about.cpp  app.pro  color.cpp  common.h  cyan_common.cpp  cyan_common.h  editor.cpp  editor.h  layers.cpp  layertree.h  main.cpp  mdi.h  mdisubwindow.cpp  messages.cpp  setup.cpp  tabs.cpp  view.cpp  view.h  viewer.h  viewtool.cpp
canvas/: canvas.pro  cyan_layeritem.cpp  cyan_view.cpp  cyan_view.h
cc/: CMakeLists.txt  cc.pro  cyan.cpp
colors/: colorcmyk.cpp  colorrgb.cpp  colors.pro  qtcolorpicker.h
common/: common.pro  common_global.h  cyan_colorconvert.cpp  cyan_common.cpp  cyan_common.h  cyan_layeritem.cpp  cyan_layeritem.h  cyan_render.cpp  cyan_render.h  cyan_tileitem.cpp  cyan_tileitem.h  cyan_view.cpp  cyan_view.h
converter/: CMakeLists.txt  converter.pro  cyan.cpp  cyan.h  geticc.cxx  helpdialog.h  imageview.cpp  imageview.h  main.cpp  profiledialog.h  tests.pro
converter/docs/: cyan.html
converter/res/: CyanCC.desktop  cyan.qrc  tests.qrc  travis.sh
converter/res/icc/: cmyk.icc  gray.icc
converter/src/: FXX.cpp  FXX.h  cyan.cpp  geticc.cxx  main.cpp  openlayerdialog.cpp  openlayerdialog.h
converter/src/res/: Cyan.icns  Test_Out-of-Gamut_colors-en.tif  cyan.desktop  cyan.qrc
dialogs/: convertdialog.cpp  dialogs.pro  newmediadialog.h  videodialog.h
docs/: CNAME  ChangeLog  ChangeLog.md  Downloads.md  FatCow.txt  Format.md  LICENSE-CTK.txt  LICENSE-ICC.txt  LICENSE.txt  Magick.txt  Nokia.txt  README.md  Thanks.md  _config.yml  cyan.html  docs.qrc  docs2.qrc  painter.md
editor/: README.md  about.cpp  color.cpp  cyan.pri  editor.cpp  editor.h  editor.pro  fontscan.cpp  fontscan.h  layers.cpp  main.cpp  mdi.cpp  messages.cpp  qtwindowlistmenu.cpp  setup.cpp  tabs.cpp  viewtool.cpp
format/: CyanImageFormat.cpp  CyanImageFormat.h  CyanImageFormatGlobal.h  CyanTileItem.cpp  CyanTileItem.h  README.md  format.pro
fxx/: CMakeLists.txt  FXX.cxx  FXX.h  FXX.pc.in  README.md
fxx/cmake/modules/: Common.cmake  CommonLink.cmake  CommonSetup.cmake
layers/: cyan_layeritem.h  cyan_layertree.cpp  cyan_layertree.h  cyan_layertreeitem.cpp  cyan_layertreeitem.h  cyan_layerwidget.cpp  cyan_layerwidget.h  layers.pro
lib/: CMakeLists.txt  CyanAboutDialog.cpp  CyanAboutDialog.h  CyanBatchWidget.cpp  CyanBatchWidget.h  CyanColorConvert.cpp  CyanColorConvert.h  CyanColorConvertDialog.cpp  CyanColorConvertDialog.h  CyanCommon.cpp  CyanCommon.h  CyanEffectApi.h  CyanFFmpeg.cpp  CyanFFmpeg.h  CyanFFmpegOpenDialog.cpp  CyanFFmpegOpenDialog.h  CyanGlobal.h  CyanGuideItem.cpp  CyanGuideItem.h  CyanHistory.cpp  CyanHistory.h  CyanImageFormat.cpp  CyanImageFormat.h  CyanLayerItem.cpp  CyanLayerItem.h  CyanLayerItemDelegate.cpp  CyanLayerItemDelegate.h  CyanLayerTree.cpp  CyanLayerTree.h  CyanLayerTreeItem.cpp  CyanLayerTreeItem.h  CyanLayerWidget.cpp  CyanLayerWidget.h  CyanMdi.cpp  CyanMdi.h  CyanMdiWindow.cpp  CyanMdiWindow.h  CyanNewMediaDialog.cpp  CyanNewMediaDialog.h  CyanPluginLoader.cpp  (+23 more)
lib/cmake/modules/: Common.cmake  CommonLink.cmake  CommonSetup.cmake  FindLCMS2.cmake
lib/docs/: LICENSE.txt
lib/src/: colorcmyk.cpp  colorhsv.cpp  colorhsv.h  colorrgb.cpp  colorrgb.h  colorwheel.cpp  colorwheel.h  common.cpp  common.h  convertdialog.cpp  convertdialog.h  layeritem.cpp  layeritem.h  layertree.cpp  layertree.h  mdi.h  newmediadialog.cpp  newmediadialog.h  qtcolorpicker.cpp  qtcolortriangle.cpp  qtcolortriangle.h  tileitem.h  videodialog.cpp  videodialog.h  view.cpp  view.h
lumina-disk-manager/: lumina-disk-manager.desktop  lumina-disk-manager.pro  manager.cpp  manager.h  systray.cpp  systray.h  udisks2.h
lumina-image-viewer/: interfaces.h  lumina-image-viewer.pro  main.cpp  viewer.cpp  viewer.h
lumina-keyboard-manager/: common.h  dialog.cpp  lumina-keyboard-manager.desktop  lumina-keyboard-manager.pro  main.cpp  systray.cpp  systray.h
lumina-power-manager/: common.h  lumina-power-manager.desktop  lumina-power-manager.pro  manager.cpp  manager.h  powermanagement.h  systray.cpp  systray.h  upower.h
lumina-screensaver-service/: lumina-screensaver-service.desktop  lumina-screensaver-service.pro  main.cpp  screensaver.h
lumina-udisks-manager/: lumina-udisks-manager.desktop  lumina-udisks-manager.pro  main.cpp  manager.cpp  manager.h  systray.cpp  systray.h  udisks2.h
magick/: magick.pro
pasture/: CyanSliderCMYK.h  CyanSliderHSV.cpp  CyanSliderRGB.cpp  CyanTextWidget.cpp  CyanTextWidget.h
patches/: cyan_win32_fontfix.diff
plugins/: interfaces.h  plugins.pro
plugins/CyanColorTriangle/: CMakeLists.txt  CyanColorTriangle.cpp  CyanColorTriangle.h
res/: 3rdparty.txt  Colorful_Night-en.tif  ISOcoated_v2_bas.ICC  Info.plist  SourceProfileTest_CMYK_5percent-en.tif  clang-tiff-version.diff  cyan.desktop  cyan.qrc  cyan.spec  fonts.qrc  gimp.py  linux.sh  looks.xml  magick.sh  mktarball.sh  mxe.sh  osx-sdk.sh  osx.sh  qt5.diff  release.sh  sRGB.icc  sample-CMYK.tif  sample-GRAY.tif  sdk.sh  tests.qrc  travis.sh  win.sh
scripts/: ci.sh
sdk/: ci2.sh  tifflzma7.diff
src/: FXX.cpp  (+23 more)
tests/: CMakeLists.txt  tests.pro  tst_cyan.cpp
utils/geticc/: CMakeLists.txt  Makefile.unix  README.md  geticc.cxx  test.sh
v3/: CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  basicview.cpp  basicview.h  convertdialog.cpp  convertdialog.h  cyan.cpp  cyan.h  engine.cpp  engine.h  main.cpp  mdi.cpp  mdi.h  mdisubwindow.cpp  mdisubwindow.h  qtwindowlistmenu.cpp  test.cpp  tests.cpp
v3/share/: Cyan.desktop  icons.qrc
v3/share/doc/: header.md  header.tex
v3/tools/: md2pdf.sh  mkdoc.sh
(+217 files in other folders)
